[package]
authors = ["Composable Developers"]
edition = "2021"
homepage = "https://composable.finance"
name = "composable"
version = "3.10011.1"

[[bin]]
name = "composable"
path = "parachain/src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
color-eyre = { version = "0.5.11", default-features = false }
composable-node = { path = "parachain/node", features = ["composable", "dali"] }

[features]
builtin-wasm = ["composable-node/builtin-wasm"]
composable = ["composable-node/composable"]
dali = ["composable-node/dali"]
local-integration-tests = []
picasso = []
runtime-benchmarks = ["composable-node/runtime-benchmarks"]
std = ["composable-node/std"]

[workspace]
exclude = [
  "utils/extrinsics-docs-scraper",
  "integration-tests",
  "parachain/frame/vesting/cli",
]
members = [
  "services/cmc-api",
  "parachain/frame/*",
  # TODO(hussein): let's upgrade them in v0.9.33
  # "integration-tests/local-integration-tests",
  "parachain/node",
  "parachain/runtime/common",
  "parachain/runtime/primitives",
  "parachain/runtime/picasso",
  "parachain/runtime/picasso-wasm",
  "parachain/runtime/dali",
  "parachain/runtime/dali-wasm",
  "parachain/runtime/composable",
  "parachain/runtime/composable-wasm",
  "utils/common",
  "utils/collator-sidecar",
  "utils/price-feed",
]
resolver = "2"

[profile.release]
# Polkadot runtime requires unwinding.
lto = false
panic = "unwind"

[profile.production]
inherits = "release"
lto = true

[profile.cosmwasm-contracts]
codegen-units = 1
debug = false
debug-assertions = false
inherits = "production"
opt-level = "s"
overflow-checks = true
panic = "abort"
rpath = false


[workspace.dependencies]
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
collator-selection = { package = "pallet-collator-selection", git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.36" }
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.36" }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.36" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.36" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.36" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.36" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.36" }
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.36" }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.36" }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.36" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.36" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.36" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.36" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.36" }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.36" }
cumulus-primitives-utility = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.36" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.36" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.36" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.36" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.36" }
parachain-info = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.36" }
session-benchmarking = { package = "cumulus-pallet-session-benchmarking", git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.36" }
aura = { package = "pallet-aura", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }


polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.36" }
xcm = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36" }

orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.36", default-features = false }
orml-unknown-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.36", default-features = false }
orml-xcm-support = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.36", default-features = false }
orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.36", default-features = false }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.36" }

ibc = { git = "https://github.com/ComposableFi/centauri", branch ="polkadot-v0.9.36",  default-features = false }
ibc-rpc = { git = "https://github.com/ComposableFi/centauri", branch ="polkadot-v0.9.36",  default-features = false }
ibc-primitives = { git = "https://github.com/ComposableFi/centauri", branch ="polkadot-v0.9.36",  default-features = false }
ibc-runtime-api = { git = "https://github.com/ComposableFi/centauri", branch ="polkadot-v0.9.36",  default-features = false }
pallet-ibc = { git = "https://github.com/ComposableFi/centauri", branch ="polkadot-v0.9.36",  default-features = false }
pallet-ibc-ping = { git = "https://github.com/ComposableFi/centauri", branch ="polkadot-v0.9.36",  default-features = false }



xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.36" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.36" }
polkadot-service = { git = "https://github.com/paritytech/polkadot",  branch = "release-v0.9.36" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", features = [
  "rococo-native",
], branch = "release-v0.9.36" }

pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.36" }

log = { version = "0.4.14", default-features = false }

ibc-rs-scale = { package="ibc", git = "https://github.com/cosmos/ibc-rs.git", rev="9b05cee476a197f5f1cb91b91959b618e88e0839", default-features = false}
democracy = { package = "pallet-democracy", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
executive = { package = "frame-executive", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
indices = { package = "pallet-indices", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }


beefy-gadget = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
beefy-gadget-rpc = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
beefy-merkle-tree = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-beefy = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
fork-tree = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
frame-benchmarking = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
benchmarking = { package = "frame-benchmarking", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
frame-benchmarking-cli = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
frame-election-provider-support = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
frame-executive = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
frame-support = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
support = { package = "frame-support", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
frame-support-procedural = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
frame-support-procedural-tools = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
frame-support-procedural-tools-derive = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
frame-system = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
system = { package = "frame-system", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
frame-system-benchmarking = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
frame-system-rpc-runtime-api = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
system-rpc-runtime-api = { package= "frame-system-rpc-runtime-api", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
frame-try-runtime = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-aura = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-authority-discovery = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-authorship = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
authorship = { package = "pallet-authorship", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-babe = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-bags-list = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-balances = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
balances = { package = "pallet-balances", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-beefy = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-beefy-mmr = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-bounties = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-child-bounties = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-collective = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
collective = { package = "pallet-collective", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-conviction-voting = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-fast-unstake = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-nis = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-ranked-collective = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-referenda = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-state-trie-migration = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-whitelist = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-democracy = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-election-provider-multi-phase = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-election-provider-support-benchmarking = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-elections-phragmen = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-grandpa = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-identity = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
identity = { package = "pallet-identity", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-im-online = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-indices = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-membership = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
membership = { package = "pallet-membership", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-mmr = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-multisig = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
multisig = { package ="pallet-multisig", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-nomination-pools = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-nomination-pools-benchmarking = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-nomination-pools-runtime-api = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-offences = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-offences-benchmarking = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-preimage = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
preimage = { package = "pallet-preimage", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-proxy = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
proxy = { package = "pallet-proxy", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-randomness-collective-flip = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
randomness-collective-flip = { package= "pallet-randomness-collective-flip", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-recovery = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-scheduler = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
scheduler = { package = "pallet-scheduler", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-session = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
session = { package = "pallet-session", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-session-benchmarking = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-society = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-staking = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-staking-reward-curve = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-staking-reward-fn = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-sudo = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sudo = { package ="pallet-sudo", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-timestamp = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
timestamp = { package ="pallet-timestamp",  git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-tips = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-transaction-payment = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-transaction-payment-rpc = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
transaction-payment-rpc-runtime-api = { package = "pallet-transaction-payment-rpc-runtime-api", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-treasury = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
treasury = { package = "pallet-treasury", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-utility = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
utility = { package = "pallet-utility", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
pallet-vesting = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-allocator = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-authority-discovery = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-basic-authorship = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-block-builder = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-chain-spec = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-chain-spec-derive = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-cli = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-client-api = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-client-db = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-consensus = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-consensus-aura = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-consensus-babe = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-consensus-babe-rpc = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-consensus-epochs = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-consensus-slots = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-executor = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-executor-common = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-executor-wasmi = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-executor-wasmtime = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-finality-grandpa = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-finality-grandpa-rpc = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-informant = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-keystore = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-network = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-network-common = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-network-gossip = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-offchain = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-peerset = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-proposer-metrics = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-rpc = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-rpc-api = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-rpc-server = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-service = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-state-db = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-sync-state-rpc = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-sysinfo = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-telemetry = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-tracing = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-tracing-proc-macro = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-transaction-pool = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-transaction-pool-api = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sc-utils = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-api = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-api-proc-macro = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-application-crypto = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-arithmetic = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-authority-discovery = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-authorship = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-block-builder = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-blockchain = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-consensus = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-consensus-aura = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-consensus-babe = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-consensus-slots = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-consensus-vrf = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-core = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-core-hashing = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-core-hashing-proc-macro = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-database = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-debug-derive = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-externalities = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-finality-grandpa = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-inherents = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-io = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-keyring = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-keystore = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-maybe-compressed-blob = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-mmr-primitives = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-npos-elections = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-offchain = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-panic-handler = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-rpc = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-runtime = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-runtime-interface = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-runtime-interface-proc-macro = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-session = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-staking = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-state-machine = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-std = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-storage = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-timestamp = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-tracing = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-transaction-pool = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-transaction-storage-proof = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-trie = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-version = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-version-proc-macro = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-wasm-interface = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
sp-weights = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
substrate-build-script-utils = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
substrate-frame-rpc-system = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
substrate-prometheus-endpoint = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
substrate-state-trie-migration-rpc = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
substrate-wasm-builder = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
try-runtime-cli = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
mmr-gadget = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}
mmr-rpc = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" , default-features = false}


[patch."https://github.com/paritytech/substrate"]
beefy-gadget = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
beefy-gadget-rpc = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
beefy-merkle-tree = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-beefy = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
fork-tree = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
frame-benchmarking = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
frame-benchmarking-cli = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
frame-election-provider-support = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
frame-executive = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
frame-support = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
frame-support-procedural = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
frame-support-procedural-tools = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
frame-support-procedural-tools-derive = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
frame-system = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
frame-system-benchmarking = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
frame-system-rpc-runtime-api = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
frame-try-runtime = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-aura = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-authority-discovery = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
authorship = { package = "pallet-authorship", git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-babe = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-bags-list = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-balances = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-beefy = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-beefy-mmr = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-bounties = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-child-bounties = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-collective = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-conviction-voting = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-fast-unstake = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-nis = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-ranked-collective = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-referenda = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-state-trie-migration = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-whitelist = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-democracy = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-election-provider-multi-phase = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-election-provider-support-benchmarking = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-elections-phragmen = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-grandpa = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-identity = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-im-online = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-indices = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-membership = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-mmr = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-multisig = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-nomination-pools = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-nomination-pools-benchmarking = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-nomination-pools-runtime-api = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-offences = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-offences-benchmarking = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-preimage = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-proxy = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-randomness-collective-flip = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-recovery = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-scheduler = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-session = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-session-benchmarking = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-society = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-staking = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-staking-reward-curve = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-staking-reward-fn = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-sudo = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-timestamp = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-tips = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-transaction-payment = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-transaction-payment-rpc = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-treasury = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-utility = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
pallet-vesting = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-allocator = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-authority-discovery = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-basic-authorship = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-block-builder = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-chain-spec = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-chain-spec-derive = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-cli = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-client-api = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-client-db = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-consensus = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-consensus-aura = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-consensus-babe = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-consensus-babe-rpc = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-consensus-epochs = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-consensus-slots = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-executor = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-executor-common = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-executor-wasmi = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-executor-wasmtime = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-finality-grandpa = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-finality-grandpa-rpc = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-informant = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-keystore = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-network = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-network-common = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-network-gossip = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-offchain = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-peerset = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-proposer-metrics = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-rpc = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-rpc-api = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-rpc-server = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-service = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-state-db = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-sync-state-rpc = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-sysinfo = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-telemetry = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-tracing = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-tracing-proc-macro = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-transaction-pool = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-transaction-pool-api = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sc-utils = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-api = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-api-proc-macro = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-application-crypto = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-arithmetic = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-authority-discovery = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-authorship = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-block-builder = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-blockchain = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-consensus = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-consensus-aura = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-consensus-babe = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-consensus-slots = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-consensus-vrf = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-core = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-core-hashing = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-core-hashing-proc-macro = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-database = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-debug-derive = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-externalities = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-finality-grandpa = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-inherents = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-io = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-keyring = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-keystore = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-maybe-compressed-blob = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-mmr-primitives = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-npos-elections = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-offchain = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-panic-handler = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-rpc = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-runtime = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-runtime-interface = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-runtime-interface-proc-macro = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-session = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-staking = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-state-machine = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-std = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-storage = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-timestamp = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-tracing = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-transaction-pool = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-transaction-storage-proof = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-trie = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-version = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-version-proc-macro = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-wasm-interface = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
sp-weights = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
substrate-build-script-utils = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
substrate-frame-rpc-system = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
substrate-prometheus-endpoint = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
substrate-state-trie-migration-rpc = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
substrate-wasm-builder = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
try-runtime-cli = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
mmr-gadget = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
mmr-rpc = { git = "https://github.com/ComposableFi/substrate", branch = "polkadot-v0.9.36" }
